# DADK

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: issue-checker.yml
.github/workflows/: docs.yml  rust.yml
config/: app-blocklist.toml
crates/test_base/: Cargo.toml
crates/test_base/src/: dadk_config.rs  dadk_user.rs  global.rs  lib.rs
dadk/: Cargo.toml
dadk-config/: Cargo.toml
dadk-config/src/: app_blocklist.rs  lib.rs  manifest.rs  utils.rs
dadk-config/src/boot/: dragonstub.rs  grub.rs  metadata.rs  mod.rs  uboot.rs
dadk-config/src/boot/hypervisor/: hyp_type.rs  mod.rs  qemu.rs
dadk-config/src/common/: mod.rs  target_arch.rs  task.rs
dadk-config/src/hypervisor/: mod.rs
dadk-config/src/rootfs/: fstype.rs  mod.rs  partition.rs
dadk-config/src/rootfs/utils/: size.rs
dadk-config/src/user/: mod.rs
dadk-config/templates/: dadk-manifest.toml
dadk-config/templates/config/: app-blocklist.toml  boot.toml  rootfs.toml  userapp_config.toml  userapp_test_git.toml  userapp_test_local.toml
dadk-config/tests/: test_app_blocklist.rs  test_boot_config.rs  test_dadk_manifest.rs  test_rootfs_config.rs  test_template_config.rs  test_user_config.rs
dadk-user/: Cargo.toml
dadk-user/src/: context.rs  lib.rs
dadk-user/src/console/: clean.rs  elements.rs  interactive.rs  mod.rs
dadk-user/src/executor/: cache.rs  mod.rs  source.rs  target.rs  tests.rs
dadk-user/src/parser/: README.md  config.rs  mod.rs  task.rs  task_log.rs  tests.rs
dadk-user/src/scheduler/: mod.rs  task_deque.rs  tests.rs
dadk-user/src/static_resources/targets/rust/: x86_64-unknown-dragonos.json
dadk-user/src/utils/: file.rs  lazy_init.rs  mod.rs  path.rs  stdio.rs
dadk-user/templates/config/build_from_source/: test_archive.toml  test_git.toml  test_local.toml
dadk-user/templates/config/install_from_prebuild/: test_archive.toml  test_local.toml
dadk-user/templates/config/install_from_prebuilt/: test_archive.toml  test_local.toml
dadk-user/tests/: test_parse_dadk_user_config.rs
dadk/src/: console.rs  lib.rs  main.rs  utils.rs
dadk/src/actions/: mod.rs  user.rs
dadk/src/actions/profile/: mod.rs
dadk/src/actions/rootfs/: disk_img.rs  loopdev.rs  loopdev_v1.rs  loopdev_v2.rs  mod.rs  sysroot.rs
dadk/src/actions/rootfs/v1/: disk_img.rs  mod.rs
dadk/src/actions/rootfs/v2/: disk_img.rs  loopdev.rs
dadk/src/console/: mod.rs  profile.rs  rootfs.rs  tests.rs  user.rs
dadk/src/context/: manifest.rs  mod.rs
docs/: .gitignore  package-lock.json  package.json
docs/.vuepress/: config.js
docs/dev-guide/: README.md  how-to-write-docs.md
docs/user-manual/: README.md  app-blocklist.md  envs.md  profiling.md  quickstart.md  rootfs-base.md  user-prog-build.md
src/: context.rs  lib.rs  main.rs
src/console/: README.md  clean.rs  elements.rs  interactive.rs  mod.rs  new_config.rs
src/executor/: README.md  cache.rs  mod.rs  source.rs  target.json  target.rs  tests.rs
src/parser/: mod.rs  task.rs
src/scheduler/: README.md  mod.rs  task_deque.rs  tests.rs
src/static_resources/: mod.rs
src/utils/: file.rs  lazy_init.rs  mod.rs
tests/: parser.rs
tests/data/: .gitignore  dadk-manifest.toml
tests/data/apps/app_normal/: build.sh
tests/data/apps/app_normal_with_env/: build.sh
tests/data/apps/app_normal_with_env_fail/: build.sh
tests/data/config/: rootfs.toml
tests/data/dadk_config_v1/: app_all_target_arch_0_1_0.dadk  app_normal_0_1_0.dadk  app_normal_with_env_0_1_0.dadk  app_normal_with_env_fail_0_1_0.dadk  app_target_arch_empty_should_fail_0_1_0.dadk  app_target_arch_riscv64_only_0_1_0.dadk  app_target_arch_x86_64_0_1_0.dadk  app_target_arch_x86_64_only_0_1_0.dadk  app_target_arch_x86_64_uppercase_0_1_0.dadk
tests/data/dadk_config_v2/: app_all_target_arch_0_2_0.toml  app_normal_with_env_0_2_0.toml  app_normal_with_env_fail_0_2_0.toml  app_target_arch_riscv64_only_0_2_0.toml  app_target_arch_x86_64_only_0_2_0.toml
