[package]
name = "dadk"
authors = ["longjin <longjin@DragonOS.org>"]
version = "0.1.0"
edition = "2021"
description = "DragonOS Application Development Kit\nDragonOS应用开发工具"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
