[package]
name = "dadk"
authors = ["longjin <longjin@DragonOS.org>", "chikejian <chikejian@DragonOS.org>"]
version = "0.1.11"
edition = "2021"
description = "DragonOS Application Development Kit\nDragonOS应用开发工具"
license = "GPL-2.0-only"
repository = "https://github.com/DragonOS-Community/DADK.git"
readme = "README.md"

[workspace]
members = [
    "crates/test_base",
]

[[bin]]
name = "dadk"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "=0.4.35", features = ["serde"] }
clap = { version = "=4.2.4", features = ["derive"] }
derive_builder = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
simple_logger = { version = "4.1.0", features = ["stderr"] }
toml = "0.8.12"
zip = "1.3"

[dev-dependencies]
test_base = { path = "crates/test_base" }

