[workspace]
resolver = "2"
members = [
    "crates/test_base", "dadk", "dadk-config", "dadk-user",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.21"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"

[profile.release]
lto = true
opt-level = 3
