[package]
name = "dadk-config"
version = "0.2.0"
edition = "2021"
authors = [
    "longjin <longjin@DragonOS.org>",
    "chikejian <chikejian@DragonOS.org>",
    "xuzihao <xuzihao@DragonOS.org>"
]

[dependencies]
anyhow = { version = "1.0.90", features = ["std", "backtrace"] }
cfg-if = "1.0.0"
env_logger = "0.11.5"
indexmap = "2.6.0"
log = "0.4.22"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
shlex = "1.3.0"
toml = "0.8.12"

# 只有在test的情况下才会引入下列库
[dev-dependencies]
tempfile = "3.13.0"
test_base = { path = "../crates/test_base" }
