[package]
name = "dadk-user"
version = "0.1.11"
edition = "2021"

[dependencies]
chrono = { version = "=0.4.35", features = ["serde"] }
clap = { version = "=4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
toml = "0.8.12"
zip = "0.6"

[dev-dependencies]
test_base = { path = "../crates/test_base" }