[package]
name = "dadk"
authors = [
    "longjin <longjin@DragonOS.org>",
    "chikejian <chikejian@DragonOS.org>",
    "xuzihao <xuzihao@DragonOS.org>"
]

version = "0.1.11"
edition = "2021"
description = "DragonOS Application Development Kit\nDragonOS应用开发工具"
license = "GPL-2.0-only"
repository = "https://github.com/DragonOS-Community/DADK.git"
readme = "README.md"


[[bin]]
name = "dadk"
path = "src/main.rs"
doc = true

# 这个target与上面的内容一样，
# 只是为了方便在开发，测试时使用（不会跟正式版本的dadk冲突）
[[bin]]
name = "dadk-insiders"
path = "src/main.rs"
doc = true


[dependencies]
anyhow = { version = "1.0.90", features = ["std", "backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
dadk-config = { path = "../dadk-config" }
dadk-user = { path = "../dadk-user" }
derive_builder = "0.20.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.9.1"

[dev-dependencies]
tempfile = "3.13.0"
